--- a/index.html
+++ b/index.html
@@ -3,16 +3,24 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Laudo</title>
+  <title>SI - Sistema de Informação . Laudos.</title>
 
   <style>
     :root{
-      --blue1:#0d3a66;
-      --blue2:#06243f;
-      --panel:#ffffff;
-      --muted:#4b667d;
-      --border:#d8e6f3;
-      --shadow: 0 16px 45px rgba(0,0,0,.12);
+      --verde1:#73FF9A;
+      --verde2:#30E18B;
+      --azul1:#0e4d7d;
+      --azul2:#06233f;
+
+      --ink:#06243f;
+      --muted: rgba(6,36,63,.72);
+
+      --glass: rgba(255,255,255,.14);
+      --glass2: rgba(255,255,255,.10);
+      --stroke: rgba(255,255,255,.28);
+
+      --shadow: 0 18px 55px rgba(0,0,0,.16);
+      --shadow2: 0 10px 28px rgba(0,0,0,.12);
     }
 
     *{ box-sizing:border-box; }
@@ -20,258 +28,254 @@
     body{
       margin:0;
       font-family: Arial, sans-serif;
-      background: linear-gradient(120deg, #eef7ff, #f5fbff);
-      padding: 18px;
+      min-height:100vh;
+      color: var(--ink);
+      background: linear-gradient(90deg, var(--verde1) 0%, var(--verde2) 22%, var(--azul1) 70%, var(--azul2) 100%);
+      overflow-x:hidden;
     }
 
-    .page{
-      width: min(1100px, 96vw);
-      margin: 0 auto;
-      background: var(--panel);
-      border: 1px solid var(--border);
-      border-radius: 18px;
+    body::before{
+      content:"";
+      position: fixed;
+      inset: 0;
+      background: url("logo/sesctopo.png") center 72% / min(980px, 92vw) no-repeat;
+      opacity: 0.08;
+      pointer-events:none;
+      z-index: 0;
+    }
+
+    header, main{ position:relative; z-index:1; }
+
+    /* ===========================
+       TOPO
+    =========================== */
+    header{
+      padding: 18px 24px 8px;
+    }
+
+    .headRow{
+      display:flex;
+      align-items:center;
+      gap:14px;
+      flex-wrap:wrap;
+    }
+
+    .topLogo{
+      height: 52px;
+      width: auto;
+      object-fit: contain;
+      display:block;
+      filter: drop-shadow(0 10px 18px rgba(0,0,0,.10));
+    }
+
+    .headTitle{
+      display:flex;
+      flex-direction:column;
+      gap:2px;
+    }
+
+    .sysName{
+      margin:0;
+      font-size: 34px;
+      font-weight: 900;
+      letter-spacing: .2px;
+      color: var(--ink);
+      text-shadow: 0 14px 30px rgba(0,0,0,.08);
+    }
+
+    .sysSub{
+      margin:0;
+      font-size: 15px;
+      font-weight: 900;
+      letter-spacing: .6px;
+      color: rgba(6,36,63,.85);
+    }
+
+    /* ===========================
+       CONTEÚDO CENTRAL
+    =========================== */
+    main{
+      width:min(980px, 94vw);
+      margin: 12px auto 40px;
+    }
+
+    .glass{
+      border-radius: 28px;
+      border: 1px solid var(--stroke);
+      background: linear-gradient(180deg, rgba(255,255,255,.18), rgba(255,255,255,.08));
       box-shadow: var(--shadow);
+      backdrop-filter: blur(12px);
+      -webkit-backdrop-filter: blur(12px);
       overflow:hidden;
     }
 
-    header{
-      padding: 16px 18px;
-      border-bottom: 1px solid var(--border);
+    .panel{
+      padding: 22px;
+      display:flex;
+      flex-direction:column;
+      gap: 16px;
+    }
+
+    .panelTitle{
+      font-size: 26px;
+      font-weight: 900;
+      letter-spacing: 1px;
+      color: var(--ink);
+      margin: 0;
+      text-transform: uppercase;
+    }
+
+    /* Guia “régua” */
+    .guideLine{
+      padding: 12px 14px;
+      border-radius: 18px;
+      border: 1px solid rgba(255,255,255,.32);
+      background: rgba(255,255,255,.20);
+      box-shadow: var(--shadow2);
       display:flex;
       align-items:center;
-      justify-content:space-between;
-      gap:10px;
+      justify-content:flex-start;
       flex-wrap:wrap;
-      background: linear-gradient(90deg, rgba(13,58,102,.06), rgba(6,36,63,.03));
-    }
-
-    .title{
+      gap: 10px;
       font-weight: 900;
-      color: var(--blue2);
-      font-size: 20px;
-      letter-spacing: .4px;
+      color: rgba(6,36,63,.92);
+      letter-spacing: .7px;
     }
 
-    .actions{
-      display:flex;
-      gap:10px;
-      flex-wrap:wrap;
+    .guideLine .tag{
+      padding: 6px 10px;
+      border-radius: 999px;
+      border: 1px solid rgba(6,36,63,.18);
+      background: rgba(255,255,255,.18);
+      box-shadow: 0 10px 20px rgba(0,0,0,.08);
+      white-space: nowrap;
+    }
+
+    .guideLine .sep{
+      opacity: .55;
+      font-weight: 900;
+    }
+
+    textarea{
+      width:100%;
+      min-height: 310px;
+      resize: vertical;
+      border-radius: 22px;
+      border: 1px solid rgba(255,255,255,.34);
+      background: rgba(255,255,255,.16);
+      box-shadow: var(--shadow2);
+      padding: 16px;
+      outline:none;
+      font-size: 16px;
+      color: var(--ink);
+    }
+
+    textarea::placeholder{ color: rgba(6,36,63,.55); }
+
+    textarea:focus{
+      border-color: rgba(6,36,63,.28);
+      box-shadow: 0 0 0 4px rgba(6,36,63,.10), var(--shadow2);
     }
 
     .btn{
+      width:100%;
       border:none;
+      border-radius: 22px;
+      padding: 18px 18px;
       cursor:pointer;
-      border-radius: 999px;
-      padding: 10px 14px;
+      font-size: 22px;
       font-weight: 900;
-      letter-spacing: .2px;
+      letter-spacing: .3px;
       color:#fff;
-      background: linear-gradient(90deg, var(--blue1), var(--blue2));
-      box-shadow: 0 10px 25px rgba(6,36,63,.15);
+      background: linear-gradient(90deg, #0d3a66, #06243f);
+      box-shadow: 0 22px 38px rgba(6,36,63,.25);
+      transition: transform .08s ease, filter .2s ease;
     }
-    .btn.gray{
-      background: linear-gradient(90deg, #607d8b, #455a64);
-    }
+    .btn:hover{ filter: brightness(1.05); }
+    .btn:active{ transform: translateY(1px); }
 
-    .content{
-      padding: 18px;
+    .formRow{
       display:grid;
-      gap:14px;
+      grid-template-columns: 1fr 240px;
+      gap: 14px;
     }
-
-    .grid{
-      display:grid;
-      grid-template-columns: 1fr 260px;
-      gap:14px;
-    }
-    @media(max-width:900px){
-      .grid{ grid-template-columns: 1fr; }
+    @media(max-width:720px){
+      .formRow{ grid-template-columns: 1fr; }
     }
 
     label{
-      font-weight: 900;
-      color: var(--blue2);
-      margin-bottom: 6px;
       display:block;
+      font-weight: 900;
+      margin-bottom: 6px;
+      color: var(--ink);
     }
 
     input{
       width:100%;
       padding: 12px 12px;
-      border-radius: 14px;
-      border: 1px solid var(--border);
+      border-radius: 18px;
+      border: 1px solid rgba(255,255,255,.34);
+      background: rgba(255,255,255,.18);
+      box-shadow: var(--shadow2);
       outline:none;
       font-size: 15px;
-      background:#fff;
+      color: var(--ink);
     }
-
-    textarea{
-      width:100%;
-      min-height: 520px;
-      resize: vertical;
-      border-radius: 14px;
-      border: 1px solid var(--border);
-      padding: 14px;
-      outline:none;
-      font-size: 15px;
-      line-height:1.4;
-      background:#fff;
-      font-family: Arial, sans-serif;
-    }
-
-    /* ✅ Cabeçalho impresso */
-    .printHeader{
-      border: 1px solid var(--border);
-      border-radius: 14px;
-      padding: 12px 14px;
-      background: #f8fbff;
-      display:flex;
-      justify-content:space-between;
-      gap:12px;
-      flex-wrap:wrap;
-    }
-    .printHeader b{ color: var(--blue2); }
-    .printHeader .item{
-      font-weight: 800;
-      color: #163a57;
-    }
-
-    /* ✅ Conteúdo impresso do laudo */
-    #printConteudo{
-      display:none; /* aparece só no print */
-      border: 1px solid var(--border);
-      border-radius: 14px;
-      padding: 14px;
-      background: #fff;
-      white-space: pre-wrap;  /* mantém quebras de linha */
-      line-height: 1.45;
-      font-size: 15px;
-      color: #0c2a44;
-      min-height: 520px;
-    }
-
-    .note{
-      color: var(--muted);
-      font-weight: 700;
-      font-size: 14px;
-    }
-
-    /* ===========================
-       ✅ IMPRESSÃO
-    =========================== */
-    @media print{
-      body{ background:#fff; padding:0; }
-      header{ display:none; }
-      .page{ border:none; box-shadow:none; border-radius:0; }
-
-      /* esconde campos de edição no papel */
-      .note, .grid, textarea { display:none !important; }
-
-      /* mostra a versão imprimível */
-      #printConteudo{ display:block; border:none; padding:0; min-height:auto; }
-      .printHeader{ border:none; padding:0 0 10px 0; border-radius:0; }
+    input:focus{
+      border-color: rgba(6,36,63,.28);
+      box-shadow: 0 0 0 4px rgba(6,36,63,.10), var(--shadow2);
     }
   </style>
 </head>
 
 <body>
-  <div class="page">
-    <header>
-      <div class="title">Laudo — Digitação e Impressão</div>
-      <div class="actions">
-        <button class="btn gray" id="btnVoltar" type="button">Voltar</button>
-        <button class="btn" id="btnImprimir" type="button">Imprimir</button>
+
+  <header>
+    <div class="headRow">
+      <img class="topLogo" src="logo/sesctopo.png" alt="SESC Topo">
+      <div class="headTitle">
+        <h1 class="sysName">Sistema de Laudos</h1>
+        <p class="sysSub">SI - Sistema de Informação . Laudos.</p>
       </div>
-    </header>
+    </div>
+  </header>
 
-    <div class="content">
+  <main>
+    <section class="glass panel" aria-label="Digitação rápida">
+      <h2 class="panelTitle">Digitação rápida</h2>
 
-      <!-- ✅ Cabeçalho que imprime -->
-      <div class="printHeader" id="printHeader">
-        <div class="item"><b>Paciente:</b> <span id="printNome">—</span></div>
-        <div class="item"><b>Nº Exame:</b> <span id="printExame">—</span></div>
+      <div class="guideLine" aria-label="Guia de digitação">
+        <span class="tag">DC</span><span class="sep">|</span>
+        <span class="tag">DN</span><span class="sep">|</span>
+        <span class="tag">CN</span><span class="sep">|</span>
+        <span class="tag">TEL</span><span class="sep">|</span>
+        <span class="tag">RUA</span><span class="sep">|</span>
+        <span class="tag">CEP</span><span class="sep">|</span>
+        <span class="tag">RES</span>
+        <span class="sep">=</span>
+        <span class="tag">SNM</span><span class="sep">|</span>
+        <span class="tag">EAM</span>
       </div>
 
-      <!-- área editável -->
-      <div class="grid">
+      <textarea id="textoDigitacao" placeholder="Cole aqui os dados do paciente conforme a ordem acima..."></textarea>
+
+      <button class="btn" id="btnExtrair" type="button">EXTRAIR AUTOMATICAMENTE E ABRIR</button>
+
+      <div class="formRow">
         <div>
-          <label>Nome do Paciente</label>
-          <input id="nome" placeholder="Nome do paciente"/>
+          <label>Paciente</label>
+          <input id="nome" placeholder="NOME COMPLETO" />
         </div>
         <div>
           <label>Nº Exame</label>
-          <input id="exame" placeholder="000156/2026"/>
+          <input id="exame" placeholder="000156/2026" />
         </div>
       </div>
-
-      <div>
-        <label>Digitação do Laudo</label>
-        <textarea id="conteudo" placeholder="Digite aqui o conteúdo do laudo..."></textarea>
-      </div>
-
-      <!-- ✅ Versão imprimível do conteúdo -->
-      <div id="printConteudo"></div>
-
-      <div class="note">
-        Dica: Tudo que você digitar no laudo será impresso exatamente como aparece.
-      </div>
-
-    </div>
-  </div>
+    </section>
+  </main>
 
   <script>
-    const $ = (id)=>document.getElementById(id);
-
-    function getQuery(){
-      const q = {};
-      const params = new URLSearchParams(location.search);
-      for(const [k,v] of params.entries()) q[k] = v;
-      return q;
-    }
-
-    function carregarDados(){
-      let dados = null;
-      try{
-        dados = JSON.parse(localStorage.getItem("SI_DADOS_LAUDO") || "null");
-      }catch(e){ dados = null; }
-
-      const q = getQuery();
-
-      const nome  = (q.nome  || (dados && dados.nome)  || "").trim();
-      const exame = (q.exame || (dados && dados.exame) || "").trim();
-
-      $("nome").value  = nome;
-      $("exame").value = exame;
-
-      // se quiser, pode pré preencher o texto bruto:
-      // $("conteudo").value = (dados && dados.textoBruto) ? dados.textoBruto : "";
-
-      syncParaImpressao();
-    }
-
-    function syncParaImpressao(){
-      $("printNome").textContent  = $("nome").value.trim() || "—";
-      $("printExame").textContent = $("exame").value.trim() || "—";
-
-      // ✅ copia o que está no textarea para o bloco imprimível
-      const txt = $("conteudo").value || "";
-      $("printConteudo").textContent = txt;
-    }
-
-    $("nome").addEventListener("input", syncParaImpressao);
-    $("exame").addEventListener("input", syncParaImpressao);
-    $("conteudo").addEventListener("input", syncParaImpressao);
-
-    $("btnImprimir").addEventListener("click", ()=>{
-      syncParaImpressao(); // ✅ garante antes do print
-      window.print();
-    });
-
-    $("btnVoltar").addEventListener("click", ()=>{
-      window.location.href = "index.html";
-    });
-
-    carregarDados();
+    // Layout ok. Depois corrigimos o extrair.
   </script>
 </body>
 </html>
