--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>SI - Sistema de Informação . Laudos.</title>
+  <title>SI - SISTEMA DE INFORMAÇÃO . LAUDOS.</title>
 
   <style>
     :root{
@@ -13,10 +13,6 @@
       --azul2:#06233f;
 
       --ink:#06243f;
-      --muted: rgba(6,36,63,.72);
-
-      --glass: rgba(255,255,255,.14);
-      --glass2: rgba(255,255,255,.10);
       --stroke: rgba(255,255,255,.28);
 
       --shadow: 0 18px 55px rgba(0,0,0,.16);
@@ -25,132 +21,128 @@
 
     *{ box-sizing:border-box; }
 
-    body{
+    html, body{
+      width:100%;
+      height:100%;
       margin:0;
+      padding:0;
+      overflow: hidden !important; /* ✅ sem scroll */
+    }
+
+    body{
       font-family: Arial, sans-serif;
-      min-height:100vh;
       color: var(--ink);
       background: linear-gradient(90deg, var(--verde1) 0%, var(--verde2) 22%, var(--azul1) 70%, var(--azul2) 100%);
-      overflow-x:hidden;
+      position: relative;
     }
 
     body::before{
       content:"";
-      position: fixed;
+      position: absolute;
       inset: 0;
-      background: url("logo/sesctopo.png") center 72% / min(980px, 92vw) no-repeat;
-      opacity: 0.08;
+      background: url("logo/sesctopo.png") center 70% / 900px no-repeat;
+      opacity: 0.09;
       pointer-events:none;
-      z-index: 0;
+      z-index:0;
     }
 
     header, main{ position:relative; z-index:1; }
 
-    /* ===========================
-       TOPO
-    =========================== */
-    header{
-      padding: 18px 24px 8px;
-    }
-
-    .headRow{
-      display:flex;
-      align-items:center;
-      gap:14px;
-      flex-wrap:wrap;
-    }
-
-    .topLogo{
-      height: 52px;
-      width: auto;
-      object-fit: contain;
-      display:block;
-      filter: drop-shadow(0 10px 18px rgba(0,0,0,.10));
-    }
-
-    .headTitle{
+    .screen{
+      width: 100%;
+      height: 100%;
+      padding: 22px 34px;
       display:flex;
       flex-direction:column;
-      gap:2px;
+      gap: 12px;
     }
 
-    .sysName{
+    header{
+      flex: 0 0 auto;
+      display:flex;
+      align-items:center;
+      gap:16px;
+      padding-bottom: 4px;
+    }
+    .topLogo{
+      height: 56px;
+      width:auto;
+      object-fit: contain;
+      display:block;
+      filter: drop-shadow(0 12px 20px rgba(0,0,0,.10));
+    }
+    .sysOnly{
       margin:0;
       font-size: 34px;
       font-weight: 900;
-      letter-spacing: .2px;
+      letter-spacing: 1px;
+      text-transform: uppercase;
       color: var(--ink);
-      text-shadow: 0 14px 30px rgba(0,0,0,.08);
+      text-shadow: 0 16px 32px rgba(0,0,0,.10);
     }
 
-    .sysSub{
-      margin:0;
-      font-size: 15px;
-      font-weight: 900;
-      letter-spacing: .6px;
-      color: rgba(6,36,63,.85);
-    }
-
-    /* ===========================
-       CONTEÚDO CENTRAL
-    =========================== */
     main{
-      width:min(980px, 94vw);
-      margin: 12px auto 40px;
+      flex: 1 1 auto;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      min-height: 0;
     }
 
     .glass{
-      border-radius: 28px;
+      width: 980px;
+      height: 760px;
+      border-radius: 32px;
       border: 1px solid var(--stroke);
       background: linear-gradient(180deg, rgba(255,255,255,.18), rgba(255,255,255,.08));
       box-shadow: var(--shadow);
       backdrop-filter: blur(12px);
       -webkit-backdrop-filter: blur(12px);
-      overflow:hidden;
+      overflow: hidden;
+      display:flex;
     }
 
     .panel{
-      padding: 22px;
+      width:100%;
+      height:100%;
+      padding: 26px;
       display:flex;
       flex-direction:column;
       gap: 16px;
     }
 
     .panelTitle{
-      font-size: 26px;
+      margin:0;
+      font-size: 30px;
       font-weight: 900;
       letter-spacing: 1px;
       color: var(--ink);
-      margin: 0;
       text-transform: uppercase;
     }
 
-    /* Guia “régua” */
     .guideLine{
-      padding: 12px 14px;
-      border-radius: 18px;
+      padding: 14px 16px;
+      border-radius: 20px;
       border: 1px solid rgba(255,255,255,.32);
       background: rgba(255,255,255,.20);
       box-shadow: var(--shadow2);
       display:flex;
       align-items:center;
-      justify-content:flex-start;
       flex-wrap:wrap;
-      gap: 10px;
+      gap: 12px;
       font-weight: 900;
       color: rgba(6,36,63,.92);
       letter-spacing: .7px;
+      flex: 0 0 auto;
     }
-
     .guideLine .tag{
-      padding: 6px 10px;
+      padding: 7px 12px;
       border-radius: 999px;
       border: 1px solid rgba(6,36,63,.18);
       background: rgba(255,255,255,.18);
       box-shadow: 0 10px 20px rgba(0,0,0,.08);
       white-space: nowrap;
     }
-
     .guideLine .sep{
       opacity: .55;
       font-weight: 900;
@@ -158,24 +150,21 @@
 
     textarea{
       width:100%;
-      min-height: 310px;
-      resize: vertical;
+      flex: 1 1 auto;
+      min-height: 0;
+      resize: none;
       border-radius: 22px;
       border: 1px solid rgba(255,255,255,.34);
       background: rgba(255,255,255,.16);
       box-shadow: var(--shadow2);
-      padding: 16px;
+      padding: 18px;
       outline:none;
-      font-size: 16px;
+      font-size: 17px;
       color: var(--ink);
+      line-height: 1.35;
+      overflow: auto;
     }
-
     textarea::placeholder{ color: rgba(6,36,63,.55); }
-
-    textarea:focus{
-      border-color: rgba(6,36,63,.28);
-      box-shadow: 0 0 0 4px rgba(6,36,63,.10), var(--shadow2);
-    }
 
     .btn{
       width:100%;
@@ -190,92 +179,103 @@
       background: linear-gradient(90deg, #0d3a66, #06243f);
       box-shadow: 0 22px 38px rgba(6,36,63,.25);
       transition: transform .08s ease, filter .2s ease;
+      flex: 0 0 auto;
     }
     .btn:hover{ filter: brightness(1.05); }
     .btn:active{ transform: translateY(1px); }
-
-    .formRow{
-      display:grid;
-      grid-template-columns: 1fr 240px;
-      gap: 14px;
-    }
-    @media(max-width:720px){
-      .formRow{ grid-template-columns: 1fr; }
-    }
-
-    label{
-      display:block;
-      font-weight: 900;
-      margin-bottom: 6px;
-      color: var(--ink);
-    }
-
-    input{
-      width:100%;
-      padding: 12px 12px;
-      border-radius: 18px;
-      border: 1px solid rgba(255,255,255,.34);
-      background: rgba(255,255,255,.18);
-      box-shadow: var(--shadow2);
-      outline:none;
-      font-size: 15px;
-      color: var(--ink);
-    }
-    input:focus{
-      border-color: rgba(6,36,63,.28);
-      box-shadow: 0 0 0 4px rgba(6,36,63,.10), var(--shadow2);
-    }
   </style>
 </head>
 
 <body>
+  <div class="screen">
 
-  <header>
-    <div class="headRow">
+    <header>
       <img class="topLogo" src="logo/sesctopo.png" alt="SESC Topo">
-      <div class="headTitle">
-        <h1 class="sysName">Sistema de Laudos</h1>
-        <p class="sysSub">SI - Sistema de Informação . Laudos.</p>
-      </div>
-    </div>
-  </header>
+      <h1 class="sysOnly">SI - SISTEMA DE INFORMAÇÃO . LAUDOS.</h1>
+    </header>
 
-  <main>
-    <section class="glass panel" aria-label="Digitação rápida">
-      <h2 class="panelTitle">Digitação rápida</h2>
+    <main>
+      <section class="glass panel">
+        <h2 class="panelTitle">Digitação rápida</h2>
 
-      <div class="guideLine" aria-label="Guia de digitação">
-        <span class="tag">DC</span><span class="sep">|</span>
-        <span class="tag">DN</span><span class="sep">|</span>
-        <span class="tag">CN</span><span class="sep">|</span>
-        <span class="tag">TEL</span><span class="sep">|</span>
-        <span class="tag">RUA</span><span class="sep">|</span>
-        <span class="tag">CEP</span><span class="sep">|</span>
-        <span class="tag">RES</span>
-        <span class="sep">=</span>
-        <span class="tag">SNM</span><span class="sep">|</span>
-        <span class="tag">EAM</span>
-      </div>
-
-      <textarea id="textoDigitacao" placeholder="Cole aqui os dados do paciente conforme a ordem acima..."></textarea>
-
-      <button class="btn" id="btnExtrair" type="button">EXTRAIR AUTOMATICAMENTE E ABRIR</button>
-
-      <div class="formRow">
-        <div>
-          <label>Paciente</label>
-          <input id="nome" placeholder="NOME COMPLETO" />
+        <div class="guideLine">
+          <span class="tag">DC</span><span class="sep">|</span>
+          <span class="tag">DN</span><span class="sep">|</span>
+          <span class="tag">CN</span><span class="sep">|</span>
+          <span class="tag">TEL</span><span class="sep">|</span>
+          <span class="tag">RUA</span><span class="sep">|</span>
+          <span class="tag">CEP</span><span class="sep">|</span>
+          <span class="tag">RES</span>
+          <span class="sep">=</span>
+          <span class="tag">SNM</span><span class="sep">|</span>
+          <span class="tag">EAM</span>
         </div>
-        <div>
-          <label>Nº Exame</label>
-          <input id="exame" placeholder="000156/2026" />
-        </div>
-      </div>
-    </section>
-  </main>
+
+        <textarea id="textoDigitacao" placeholder="Cole aqui os dados do paciente conforme a ordem acima..."></textarea>
+
+        <button class="btn" id="btnExtrair" type="button">EXTRAIR AUTOMATICAMENTE E ABRIR LAUDO</button>
+      </section>
+    </main>
+
+  </div>
 
   <script>
-    // Layout ok. Depois corrigimos o extrair.
+    const LAUDO_URL = "laudo.html"; // ✅ arquivo do laudo
+
+    const $ = (id)=>document.getElementById(id);
+
+    function detectarExame(texto){
+      const m = texto.match(/(\d{3,6})\s*[\/\.\-]\s*(\d{4})/);
+      if(!m) return "";
+      return `${m[1].padStart(6,"0")}/${m[2]}`;
+    }
+
+    function extrairNome(texto){
+      const linhas = texto.split(/\r?\n/).map(l=>l.trim()).filter(Boolean);
+      return linhas[0] || "";
+    }
+
+    function abrirLaudo(dados){
+      // ✅ mais confiável: localStorage
+      localStorage.setItem("SI_DADOS_LAUDO", JSON.stringify({
+        ...dados,
+        ts: Date.now()
+      }));
+
+      // ✅ redundância: querystring pequena
+      const params = new URLSearchParams();
+      if (dados.nome) params.set("nome", dados.nome);
+      if (dados.exame) params.set("exame", dados.exame);
+
+      // ✅ abre mesma aba (sem popup e sem bloqueio)
+      window.location.assign(`${LAUDO_URL}?${params.toString()}`);
+    }
+
+    $("btnExtrair").addEventListener("click", ()=>{
+      const texto = $("textoDigitacao").value.trim();
+      if(!texto){
+        alert("Cole os dados da digitação rápida.");
+        return;
+      }
+
+      const nome  = extrairNome(texto);
+      const exame = detectarExame(texto);
+
+      abrirLaudo({
+        nome,
+        exame,
+        textoBruto: texto,
+        origem: "principal"
+      });
+    });
+
+    // Atalho: CTRL + ENTER
+    document.addEventListener("keydown", (e)=>{
+      if(e.ctrlKey && e.key === "Enter"){
+        e.preventDefault();
+        $("btnExtrair").click();
+      }
+    });
   </script>
 </body>
 </html>
